# Zekken

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt  data.json  demo.html  index.html  stress_test.py  stress_test.zk  styles.css  updates.md
benchmarks/: README.md  branch_calls.zk  cpu_numeric.zk  file_io_transform.zk  matrix_mixed.zk  queue_cleanup.zk
benchmarks/python/: branch_calls.py  cpu_numeric.py  file_io_transform.py  matrix_mixed.py  queue_cleanup.py
dev-logs/: early-development.md  release-development.md
dev-logs/release-dev/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md
examples/: bmi_calc.zk  donut.zk  fibonacci.zk  file.zk  syntax.zk
js/: ansi-to-html.js  zekken-mode.js
pkg/: package.json  zekken.js  zekken_bg.wasm  zekken_bg.wasm.d.ts  zekken_wasm.d.ts  zekken_wasm_bg.wasm
scripts/: build-cli.bat  build-cli.sh  build-wasm.bat  build-wasm.sh  build.bat  build.sh  parity-check.sh  run-benchmarks.py  run.bat
src/: diagnostics.rs  lib.rs  main.rs
src/ast/: mod.rs
src/bytecode/: compiler.rs  inst.rs  mod.rs  runtime.rs
src/bytecode/libraries/: encoding.rs  fs.rs  http.rs  math.rs  mod.rs  os.rs  path.rs
src/environment/: mod.rs
src/errors/: mod.rs
src/eval/: expression.rs  lint.rs  mod.rs  statement.rs
src/lexer/: mod.rs
src/libraries/: encoding.rs  fs.rs  http.rs  math.rs  mod.rs  os.rs  path.rs
src/parser/: mod.rs
src/tests/: fib.zk  file.zk  include.zk  input.zk  main.zk  syntax.zk
tests/: bmi_calc.zk  errors.zk  file.zk  filesystem.zk  function_assign.zk  json_data.zk  logical_not.zk  logical_or.zk  main.zk  syntax.zk  test.zk  type_methods.zk
tests/include/: export.zk  main.zk
tests/libraries/: encoding.zk  filesystem.zk  fs.zk  http.zk  math.zk  os.zk  path.zk
website/Demo/: demo.html  styles.css
website/Demo/js/: zekken_highlighter.js
website/Demo/js/WASM/: zekken_wasm.d.ts  zekken_wasm.js  zekken_wasm_bg.wasm  (+1 more)
website/Dev-Logs/: devlogs.html  styles.css
website/Docs/: docs.html  errors.html  examples.html  functions.html  getting-started.html  libraries.html  roadmap.html  styles.css  syntax-basics.html  types.html
website/Docs/js/: script.js  zekken_docs_highlighter.js
website/Download/: download.html  styles.css
website/Home/: styles.css
