[package]
name = "zekken"
version = "1.0.1"
edition = "2021"

[dependencies]
regex = "1.3.9"
toml = "0.9.5"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"
wasm-bindgen = "0.2.113"
console_error_panic_hook = "0.1.7"
hashbrown = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only HTTP support (client + server). WASM builds keep working by omitting these deps.
tiny_http = "0.12"
ureq = "2.12"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false

[lib]
name = "zekken_wasm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zekken"
path = "src/main.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
